--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.127",
-    "gatsby-link": "^1.6.30",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-source-filesystem": "^1.5.9",
-    "gatsby-transformer-remark": "^1.7.23"
+    "gatsby": "2.10.0",
+    "gatsby-link": "2.2.0",
+    "gatsby-plugin-react-helmet": "3.1.0",
+    "gatsby-source-filesystem": "2.1.0",
+    "gatsby-transformer-remark": "2.5.0"
   },
   "keywords": [
     "gatsby"
@@ -23,7 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.8.2"
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.17.1"
   }
 }
